fix: add list method

--- a/data/locales/ru.yml
+++ b/data/locales/ru.yml
@@ -1,6 +1,8 @@
 ru_RU:
   response:
     info: "Информация"
+    count: "Количество"
+    totalCount: "Всего записей"
     packages: "Список пакетов"
     packageInfo: "Информация о пакете"
     depends: "Зависимости"
