fix: add locales

--- a/data/locales/ru.yml
+++ b/data/locales/ru.yml
@@ -8,6 +8,9 @@ ru_RU:
     list: "Список"
     totalCount: "Всего записей"
     packages: "Пакеты"
+    package: "Пакет"
+    paths: "Пути"
+    isConsole: "Консольное приложение"
     packageInfo: "Информация о пакете"
     depends: "Зависимости"
     description: "Описание"
@@ -15,6 +18,7 @@ ru_RU:
     size: "Размер"
     filename: "Имя файла"
     installed: "Установлено"
+    exporting: "Экспортировано"
     installedSize: "Установленный размер"
     lastChangelog: "Последнее изменение"
     maintainer: "Мэйнтейнер"
@@ -29,3 +33,26 @@ ru_RU:
     removedPackages: "Удаленные пакеты"
     upgradedCount: "Количество обновленных"
     upgradedPackages: "Обновленные пакеты"
+    packageName: "Название пакета"
+    manager: "Пакетный менеджер"
+    containerInfo: "Информация о контейнере"
+    os: "Дистрибутив"
+    containerName: "Название контейнера"
+    active: "Активен"
+    status: "Статус"
+    image: "Образ"
+    config: "Конфигурация"
+    spec: "Спецификация"
+    booted: "Загруженный"
+    staged: "В очереди"
+    commands: "Команды"
+    install: "Установить"
+    remove: "Удалить"
+    bootedImage: "Загруженный образ"
+    imageName: "Наименование образа"
+    imageDate: "Дата образа"
+    transport: "Транспорт"
+    timestamp: "Дата"
+    pinned: "Закреплён"
+    imageDigest: "Хэш образа"
+    store: "Тип хранилища"
