fix: add progress bar and fix podman switch

--- a/data/locales/ru.yml
+++ b/data/locales/ru.yml
@@ -19,7 +19,7 @@ ru_RU:
     filename: "Имя файла"
     installed: "Установлено"
     exporting: "Экспортировано"
-    installedSize: "Установленный размер"
+    installedSize: "Займёт на диске"
     lastChangelog: "Последнее изменение"
     maintainer: "Мэйнтейнер"
     section: "Раздел"
