add Unmet dependencies for apt_cache

--- a/po/apm.pot
+++ b/po/apm.pot
@@ -95,7 +95,7 @@ msgstr ""
 #, c-format
 msgid ""
 "Some broken packages were found while trying to process build-dependencies "
-"for %s."
+"for %s"
 msgstr ""
 
 #: internal/common/apt/errors.go:202
